testdata/baselines/reference/submodule/conformance/optionalBindingParameters4.errors.txt
/a.js(4,16): error TS2339: Property 'cause' does not exist on type '{}'.


==== /a.js (1 errors) ====
    /** 
    * @param {{ cause?: string }} [options] 
    */ 
    function foo({ cause } = {}) {
                   ~~~~~
!!! error TS2339: Property 'cause' does not exist on type '{}'.
        return cause;
    }
    